[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "kv-runway"
version = "0.1.0"
description = "Deployment/promotion/environments engine for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "portalocker==3.2.0",
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
    "httpx==0.28.1",
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["runway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
