[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "kv-runway"
version = "0.1.0"
description = "Deployment/promotion/environments engine for Claude Code"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "portalocker>=3.0.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[project.urls]
Homepage = "https://github.com/kvegerano/kv-runway"
Repository = "https://github.com/kvegerano/kv-runway"

[tool.hatch.build.targets.wheel]
packages = ["runway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
